--- a/W01D03/css-flexbox/starter-code/css/style.css
+++ b/W01D03/css-flexbox/starter-code/css/style.css
@@ -27,12 +27,18 @@ img {
 .header-wrapper {
   background-color: #fff;
   border-bottom: 1px solid #e6e6e6;
+  display: flex;
+  justify-content: center;
 }
 
 header {
   max-width: 935px;
   height: 75px;
   padding: 0 20px;
+  flex-basis: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 header input {
@@ -65,7 +71,9 @@ header input:focus {
 /*PAGE WRAPPER*/
 
 .page-wrapper {
-
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; 
 }
 
 /*MAIN*/
@@ -73,16 +81,21 @@ header input:focus {
 main {
   max-width: 935px;
   padding: 60px 20px 0;
+  flex-basis: 100%;
 }
 
 /*USER DETAILS*/
 
 .profile-wrapper {
   margin-bottom: 45px;
+  display: flex;
 }
 
 .picture-wrapper {
+  flex: 1;
   margin-right: 30px;
+  display: flex;
+  justify-content: center;
 }
 
 .picture-wrapper img {
@@ -91,7 +104,7 @@ main {
 }
 
 .details-wrapper {
-
+  flex: 2;
 }
 
 .details-wrapper h1 {
@@ -121,7 +134,9 @@ main {
 /*IMAGE GRID*/
 
 .grid-wrapper ul {
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .grid-wrapper ul li {
@@ -139,10 +154,11 @@ footer {
   max-width: 935px;
   font-size: 12px;
   padding: 40px 20px;
+  flex-basis: 100%;
 }
 
 footer ul {
-
+display: flex;
 }
 
 footer ul li {
@@ -154,7 +170,7 @@ footer ul li {
 }
 
 footer ul li:last-of-type {
-
+  margin: 0 0 0 auto;
 }
 
 footer ul li a {
