--- a/W01D04/flexbox-layout-lab/starter-code/two-column/css/style.css
+++ b/W01D04/flexbox-layout-lab/starter-code/two-column/css/style.css
@@ -30,3 +30,31 @@ section:last-of-type {
 }
 
 /* flex layout stuff */
+
+
+div.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  display: flex;
+  flex-grow: 1;
+}
+
+section:first-of-type {
+  flex: 3;
+}
+
+section:last-of-type {
+  flex: 1;
+}
+
+@media only screen and (max-width: 840px) {
+
+  main {
+    flex-direction: column;
+  }
+  
+}
