--- a/cheesebored/src/styles/style.scss
+++ b/cheesebored/src/styles/style.scss
@@ -1,1 +1,5 @@
-
+.hero-body {
+  background-image: url('https://images.unsplash.com/photo-1486297678162-eb2a19b0a32d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=753&q=80');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
